# Geant4TumorTherapySim

./: .gitignore  CMakeLists.txt  G4sim_reporter.md  PROJECT.md  README.md  Tutorial.md  final_report.md  main.cc  requirements.txt  setup.sh  任务总结.md
docs/: figures_final_real_data_audit.md  final_report_chapter_plan.md  final_report_outline.md  q2_cytoplasm_control_design.md  q2_experiment_design.md  q2_final_figures_handoff.md  q2_handoff.md  q2_timing_benchmark.md
include/: ActionInitialization.hh  B10CaptureBiasOperator.hh  CellModel.hh  DetectorConstruction.hh  EventAction.hh  HumanPhantom.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  TherapyAnalysisManager.hh  TherapyConfig.hh  TrackingAction.hh  TumorModel.hh
macros/: overlap_check.mac  problem1_gamma.mac  problem1_proton.mac  problem1_proton_scan_template.mac  problem2_bnct_shell.mac  problem2_bnct_uniform.mac  problem2_gamma.mac  problem2_proton.mac  smoke_b10capture_cytoplasm.mac  smoke_b10capture_shell.mac  smoke_b10capture_uniform.mac  smoke_bnct_shell.mac  smoke_capture_bias_1.mac  smoke_capture_bias_100.mac  vis.mac  vis_proton.mac
scripts/: migrate_final_report_to_latex.py  plot_assignment_results.py  plot_body_tumor_sections_check.py  plot_q1_body_tumor_geometry.py  plot_q2_biased_scans.py  plot_q2_final_results.py  run_assignment_workflow.sh  run_q1_workflow.sh  run_q2A_main.sh  run_q2B_biased_single_seed.sh  run_q2B_bnct_statistics.sh  run_q2B_equal_dose.sh  run_q2C_ppm_scan.sh  run_q2D_forced_capture.sh  run_q2E_depth_scan.sh  run_q2_b10_scan.sh  run_q2_neutron_fluence_scan.sh  (+2 more)
(+165 files in other folders)
